Updated feedback API implementation