@@ -1,6 +1,7 @@
 package com.spring.jwt.service.impl;
 
-import com.spring.jwt.dto.*;
+import com.spring.jwt.dto.FeedbackRequestDto;
+import com.spring.jwt.dto.FeedbackResponseDto;
 import com.spring.jwt.entity.Feedback;
 import com.spring.jwt.repository.FeedbackRepository;
 import com.spring.jwt.service.FeedbackService;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,48 +20,63 @@ public class FeedbackServiceImpl implements FeedbackService {
     @Override
     public FeedbackResponseDto saveFeedback(FeedbackRequestDto request) {
 
+        // ⭐ Prevent duplicate feedback
+        if (feedbackRepository.existsByEmailAndBusinessId(
+                request.getEmail(), request.getBusinessId())) {
+
+            throw new RuntimeException("Feedback already submitted");
+        }
+
+        // ⭐ Rating validation
+        if (request.getRating() < 1 || request.getRating() > 5) {
+            throw new RuntimeException("Rating must be between 1-5");
+        }
+
         Feedback feedback = Feedback.builder()
                 .name(request.getName())
                 .email(request.getEmail())
                 .message(request.getMessage())
                 .rating(request.getRating())
+                .businessId(request.getBusinessId())
                 .createdAt(LocalDateTime.now())
                 .build();
 
         feedbackRepository.save(feedback);
 
-        return mapToDto(feedback);
+        return FeedbackResponseDto.builder()
+                .id(feedback.getId())
+                .message("Feedback saved successfully")
+                .createdAt(feedback.getCreatedAt())
+                .build();
     }
 
     @Override
     public List<FeedbackResponseDto> getAllFeedback() {
-        return feedbackRepository.findAll()
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+
+        return feedbackRepository.findAll().stream()
+                .map(f -> FeedbackResponseDto.builder()
+                        .id(f.getId())
+                        .message(f.getMessage())
+                        .createdAt(f.getCreatedAt())
+                        .build())
+                .toList();
     }
 
     @Override
-    public FeedbackResponseDto getFeedback(Long id) {
+    public FeedbackResponseDto getFeedbackById(Long id) {
+
         Feedback feedback = feedbackRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Feedback not found"));
 
-        return mapToDto(feedback);
+        return FeedbackResponseDto.builder()
+                .id(feedback.getId())
+                .message(feedback.getMessage())
+                .createdAt(feedback.getCreatedAt())
+                .build();
     }
 
     @Override
     public void deleteFeedback(Long id) {
         feedbackRepository.deleteById(id);
-    }
-
-    private FeedbackResponseDto mapToDto(Feedback feedback) {
-        return FeedbackResponseDto.builder()
-                .id(feedback.getId())
-                .name(feedback.getName())
-                .email(feedback.getEmail())
-                .message(feedback.getMessage())
-                .rating(feedback.getRating())
-                .createdAt(feedback.getCreatedAt())
-                .build();
     }
 }
